2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b172

	* Fix: manage users, create user, edit_field.php, add_photos.php, save_photos.php,
	       add_form.inc

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b171

	* Fix: view_album wasn't honoring $page

	* Fix: PHP notice about unset watermark var in view_album

	* Fix: Correct save_photos when using methods other than Form

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b170

	* Fix: Bug in view_photo prevented inline comments from operating
	  if the user didn't have View Full rights.

	* Fix: Add missing var to add_comments.php

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b169

	* Bug 1000425: Use 'deleteButton' instead of 'delete' because
	  of a JS keyword

2004-09-08  Christian Mohn <h0bbel@p0ggel.org>  1.4.5-cvs-b168

        * Fix: Closing bold tag in displayPhotoFields  

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b167

	* Change: Remove duplicate and unused options from despam-comments

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b166

	* Change: De-globalize gallery_remote2

	* Fix: function typo in despam-comments

	* Change: Use dirname(dirname()) instead of '../' in build_manifest

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b165

	* Change:  Remove session_register(), which is deprecated (and not
	  necessary, since we use $_SESSION)

	* Change:  save_photos - Don't save the album if there were 0 photos
	  uploaded.

2004-09-07  Andrew Lindeman <alindeman@users.sf.net>    1.4.5-cvs-b164
	
	* Prevent a possible PHP error (pedantic)

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b163

	* Fix: Incorrect function pluralization

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b162

	* Fix: De-globalize find_orphans

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b161
