@@ -1,3 +1,9 @@
+2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b173
+
+	* Fix: do_command.php, album_permissions.php
+
+	* Fix: initial admin user was not created in setup, as the password were not global.
+
 2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b172
 
 	* Fix: manage users, create user, edit_field.php, add_photos.php, save_photos.php,
